# fastppm

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  example.txt  meta.yaml
.github/workflows/: build.yml
examples/: sim_frequency_matrix.txt  sim_output.json  sim_total_matrix.txt  sim_tree.txt  sim_usage_matrix.txt  sim_variant_matrix.txt  total_read_matrix.txt  tree_adjacency_list.txt  variant_read_matrix.txt
include/: DiGraph.h  Lib.h
scripts/: cvxopt_binom_regression.py  gurobi_comparison.py  gurobi_lp_binom_regression.py  reference_regression.py  simulate.py  simulation.py  summarize_evaluations.py  summarize_regressions.py
scripts/nextflow/: binom_regress.nf  citup.nf  orchard.nf  regress.nf  sapling.nf  timings_l2.nf
scripts/processing/: make_projection_input.py
src/: CMakeLists.txt  CloneTree.h  DPSTATE.cpp  DPSTATE.h  DiGraph.h  Dual.cpp  Dual.h  Element.h  Func.cpp  Func.h  Lib.cpp  Lib.h  Main.cpp  Main.h  Node.cpp  Node.h  PWL.cpp  PWL.h  Primal.cpp  Primal.h  PyMain.cpp  Solver.cpp  Solver.h  State.cpp  State.h  Tree.cpp  Tree.h  main.cpp  pymain.cpp
src/Solvers/: TreeStructuredDualDP.h
src/Solvers/L2/: PiecewiseQuadraticF.h  Solver.cpp  Solver.h
src/Solvers/LogBinomialADMM/: Poly34.cpp  Poly34.h  Solver.cpp  Solver.h
src/Solvers/LogBinomialPiecewise/: Dual.cpp  Dual.h  Element.h  Func.cpp  Func.h  Node.cpp  Node.h  PWL.cpp  PWL.h  Primal.cpp  Primal.h  Solver.cpp  Solver.h  State.cpp  State.h  Tree.cpp  Tree.h
src/Solvers/PiecewiseLinear/: Dual.cpp  Dual.h  Element.h  Func.cpp  Func.h  Node.cpp  Node.h  Primal.cpp  Primal.h  Solver.cpp  Solver.h  State.cpp  State.h  Tree.cpp  Tree.h
src/Solvers/SeparableADMM/: Solver.cpp  Solver.h
